grammar/ANTLR/ScriptGrammarParser.ts
// Generated from ./ScriptGrammar.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ScriptGrammarListener } from "./ScriptGrammarListener";

export class ScriptGrammarParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly VOID = 18;
	public static readonly DATA_TYPE_STRING = 19;
	public static readonly DATA_TYPE_NUMBER = 20;
	public static readonly DATA_TYPE_BOOLEAN = 21;
	public static readonly DATA_TYPE_MAP = 22;
	public static readonly DATA_TYPE_LIST = 23;
	public static readonly DATA_TYPE_CRITERIA = 24;
	public static readonly DATA_TYPE_OBJECT = 25;
	public static readonly RETURN = 26;
	public static readonly TRY = 27;
	public static readonly CATCH = 28;
	public static readonly OR = 29;
	public static readonly SINGLE_OR = 30;
	public static readonly DOT = 31;
	public static readonly AND = 32;
	public static readonly SINGLE_AND = 33;
	public static readonly EQ = 34;
	public static readonly NEQ = 35;
	public static readonly GT = 36;
	public static readonly LT = 37;
	public static readonly GTEQ = 38;
	public static readonly LTEQ = 39;
	public static readonly PLUS = 40;
	public static readonly MINUS = 41;
	public static readonly MULT = 42;
	public static readonly DIV = 43;
	public static readonly MOD = 44;
	public static readonly POW = 45;
	public static readonly NOT = 46;
	public static readonly COMMA = 47;
	public static readonly SEMICOLON = 48;
	public static readonly COLON = 49;
	public static readonly ASSIGN = 50;
	public static readonly OPEN_PARANTHESIS = 51;
	public static readonly CLOSE_PARANTHESIS = 52;
	public static readonly OPEN_BRACE = 53;
	public static readonly CLOSE_BRACE = 54;
	public static readonly OPEN_BRACKET = 55;
	public static readonly CLOSE_BRACKET = 56;
	public static readonly TRUE = 57;
	public static readonly FALSE = 58;
	public static readonly NULL = 59;
	public static readonly IF = 60;
	public static readonly ELSE = 61;
	public static readonly FOR_EACH = 62;
	public static readonly LOG = 63;
	public static readonly VAR = 64;
	public static readonly INT = 65;
	public static readonly FLOAT = 66;
	public static readonly STRING = 67;
	public static readonly COMMENT = 68;
	public static readonly BLOCKCOMMENT = 69;
	public static readonly SPACE = 70;
	public static readonly OTHER = 71;
	public static readonly RULE_start = 0;
	public static readonly RULE_function_block = 1;
	public static readonly RULE_function_name_declare = 2;
	public static readonly RULE_function_param = 3;
	public static readonly RULE_block = 4;
	public static readonly RULE_try_catch = 5;
	public static readonly RULE_try_statement = 6;
	public static readonly RULE_catch_statement = 7;
	public static readonly RULE_statement = 8;
	public static readonly RULE_assignment = 9;
	public static readonly RULE_assignment_var = 10;
	public static readonly RULE_if_statement = 11;
	public static readonly RULE_condition_block = 12;
	public static readonly RULE_statement_block = 13;
	public static readonly RULE_for_each_statement = 14;
	public static readonly RULE_log = 15;
	public static readonly RULE_function_return = 16;
	public static readonly RULE_boolean_expr = 17;
	public static readonly RULE_boolean_expr_atom = 18;
	public static readonly RULE_expr = 19;
	public static readonly RULE_stand_alone_expr = 20;
	public static readonly RULE_calender_clock_expr = 21;
	public static readonly RULE_calender_var = 22;
	public static readonly RULE_clock_var = 23;
	public static readonly RULE_recursive_expression = 24;
	public static readonly RULE_atom = 25;
	public static readonly RULE_list_opperations = 26;
	public static readonly RULE_map_opperations = 27;
	public static readonly RULE_db_param = 28;
	public static readonly RULE_db_param_group = 29;
	public static readonly RULE_db_param_criteria = 30;
	public static readonly RULE_db_param_field_criteria = 31;
	public static readonly RULE_db_param_field = 32;
	public static readonly RULE_db_param_aggr = 33;
	public static readonly RULE_db_param_limit = 34;
	public static readonly RULE_db_param_range = 35;
	public static readonly RULE_db_param_group_by = 36;
	public static readonly RULE_db_param_sort = 37;
	public static readonly RULE_criteria = 38;
	public static readonly RULE_condition = 39;
	public static readonly RULE_condition_atom = 40;
	public static readonly RULE_data_type = 41;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "function_block", "function_name_declare", "function_param", 
		"block", "try_catch", "try_statement", "catch_statement", "statement", 
		"assignment", "assignment_var", "if_statement", "condition_block", "statement_block", 
		"for_each_statement", "log", "function_return", "boolean_expr", "boolean_expr_atom", 
		"expr", "stand_alone_expr", "calender_clock_expr", "calender_var", "clock_var", 
		"recursive_expression", "atom", "list_opperations", "map_opperations", 
		"db_param", "db_param_group", "db_param_criteria", "db_param_field_criteria", 
		"db_param_field", "db_param_aggr", "db_param_limit", "db_param_range", 
		"db_param_group_by", "db_param_sort", "criteria", "condition", "condition_atom", 
		"data_type",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'in'", "'Calender.'", "'Clock.'", "'new '", "'Module'", "'Reading'", 
		"'criteria'", "'fieldCriteria'", "'field'", "'aggregation'", "'limit'", 
		"'range'", "'to'", "'groupBy'", "'orderBy'", "'asc'", "'desc'", "'void'", 
		"'String'", "'Number'", "'Boolean'", "'Map'", "'List'", "'Criteria'", 
		"'Object'", "'return'", "'try'", "'catch'", "'||'", "'|'", "'.'", "'&&'", 
		"'&'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'^'", "'!'", "','", "';'", "':'", "'='", "'('", "')'", 
		"'{'", "'}'", "'['", "']'", "'true'", "'false'", "'null'", "'if'", "'else'", 
		"'for each'", "'log'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "VOID", "DATA_TYPE_STRING", 
		"DATA_TYPE_NUMBER", "DATA_TYPE_BOOLEAN", "DATA_TYPE_MAP", "DATA_TYPE_LIST", 
		"DATA_TYPE_CRITERIA", "DATA_TYPE_OBJECT", "RETURN", "TRY", "CATCH", "OR", 
		"SINGLE_OR", "DOT", "AND", "SINGLE_AND", "EQ", "NEQ", "GT", "LT", "GTEQ", 
		"LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", "POW", "NOT", "COMMA", 
		"SEMICOLON", "COLON", "ASSIGN", "OPEN_PARANTHESIS", "CLOSE_PARANTHESIS", 
		"OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "TRUE", 
		"FALSE", "NULL", "IF", "ELSE", "FOR_EACH", "LOG", "VAR", "INT", "FLOAT", 
		"STRING", "COMMENT", "BLOCKCOMMENT", "SPACE", "OTHER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ScriptGrammarParser._LITERAL_NAMES, ScriptGrammarParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ScriptGrammarParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ScriptGrammar.g4"; }

	// @Override
	public get ruleNames(): string[] { return ScriptGrammarParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ScriptGrammarParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ScriptGrammarParser._ATN, this);
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let _localctx: StartContext = new StartContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ScriptGrammarParser.RULE_start);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 87;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ScriptGrammarParser.T__3) | (1 << ScriptGrammarParser.T__4) | (1 << ScriptGrammarParser.T__5) | (1 << ScriptGrammarParser.VOID) | (1 << ScriptGrammarParser.DATA_TYPE_STRING) | (1 << ScriptGrammarParser.DATA_TYPE_NUMBER) | (1 << ScriptGrammarParser.DATA_TYPE_BOOLEAN) | (1 << ScriptGrammarParser.DATA_TYPE_MAP) | (1 << ScriptGrammarParser.DATA_TYPE_LIST) | (1 << ScriptGrammarParser.DATA_TYPE_CRITERIA) | (1 << ScriptGrammarParser.DATA_TYPE_OBJECT) | (1 << ScriptGrammarParser.RETURN) | (1 << ScriptGrammarParser.TRY))) !== 0) || ((((_la - 51)) & ~0x1F) === 0 && ((1 << (_la - 51)) & ((1 << (ScriptGrammarParser.OPEN_PARANTHESIS - 51)) | (1 << (ScriptGrammarParser.OPEN_BRACE - 51)) | (1 << (ScriptGrammarParser.OPEN_BRACKET - 51)) | (1 << (ScriptGrammarParser.TRUE - 51)) | (1 << (ScriptGrammarParser.FALSE - 51)) | (1 << (ScriptGrammarParser.NULL - 51)) | (1 << (ScriptGrammarParser.IF - 51)) | (1 << (ScriptGrammarParser.FOR_EACH - 51)) | (1 << (ScriptGrammarParser.LOG - 51)) | (1 << (ScriptGrammarParser.VAR - 51)) | (1 << (ScriptGrammarParser.INT - 51)) | (1 << (ScriptGrammarParser.FLOAT - 51)) | (1 << (ScriptGrammarParser.STRING - 51)) | (1 << (ScriptGrammarParser.OTHER - 51)))) !== 0)) {
				{
				{
				this.state = 84;
				this.statement();
				}
				}
				this.state = 89;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 90;
			this.match(ScriptGrammarParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_block(): Function_blockContext {
		let _localctx: Function_blockContext = new Function_blockContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ScriptGrammarParser.RULE_function_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this.data_type();
			this.state = 93;
			this.function_name_declare();
			this.state = 94;
			this.match(ScriptGrammarParser.OPEN_PARANTHESIS);
			this.state = 98;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ScriptGrammarParser.VOID) | (1 << ScriptGrammarParser.DATA_TYPE_STRING) | (1 << ScriptGrammarParser.DATA_TYPE_NUMBER) | (1 << ScriptGrammarParser.DATA_TYPE_BOOLEAN) | (1 << ScriptGrammarParser.DATA_TYPE_MAP) | (1 << ScriptGrammarParser.DATA_TYPE_LIST) | (1 << ScriptGrammarParser.DATA_TYPE_CRITERIA) | (1 << ScriptGrammarParser.DATA_TYPE_OBJECT))) !== 0)) {
				{
				{
				this.state = 95;
				this.function_param();
				}
				}
				this.state = 100;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 105;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ScriptGrammarParser.COMMA) {
				{
				{
				this.state = 101;
				this.match(ScriptGrammarParser.COMMA);
				this.state = 102;
				this.function_param();
				}
				}
				this.state = 107;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 108;
			this.match(ScriptGrammarParser.CLOSE_PARANTHESIS);
			this.state = 109;
			this.match(ScriptGrammarParser.OPEN_BRACE);
			this.state = 110;
			this.block();
			this.state = 111;
			this.match(ScriptGrammarParser.CLOSE_BRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_name_declare(): Function_name_declareContext {
		let _localctx: Function_name_declareContext = new Function_name_declareContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ScriptGrammarParser.RULE_function_name_declare);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(ScriptGrammarParser.VAR);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_param(): Function_paramContext {
		let _localctx: Function_paramContext = new Function_paramContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ScriptGrammarParser.RULE_function_param);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this.data_type();
			this.state = 116;
			this.match(ScriptGrammarParser.VAR);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ScriptGrammarParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ScriptGrammarParser.T__3) | (1 << ScriptGrammarParser.T__4) | (1 << ScriptGrammarParser.T__5) | (1 << ScriptGrammarParser.VOID) | (1 << ScriptGrammarParser.DATA_TYPE_STRING) | (1 << ScriptGrammarParser.DATA_TYPE_NUMBER) | (1 << ScriptGrammarParser.DATA_TYPE_BOOLEAN) | (1 << ScriptGrammarParser.DATA_TYPE_MAP) | (1 << ScriptGrammarParser.DATA_TYPE_LIST) | (1 << ScriptGrammarParser.DATA_TYPE_CRITERIA) | (1 << ScriptGrammarParser.DATA_TYPE_OBJECT) | (1 << ScriptGrammarParser.RETURN) | (1 << ScriptGrammarParser.TRY))) !== 0) || ((((_la - 51)) & ~0x1F) === 0 && ((1 << (_la - 51)) & ((1 << (ScriptGrammarParser.OPEN_PARANTHESIS - 51)) | (1 << (ScriptGrammarParser.OPEN_BRACE - 51)) | (1 << (ScriptGrammarParser.OPEN_BRACKET - 51)) | (1 << (ScriptGrammarParser.TRUE - 51)) | (1 << (ScriptGrammarParser.FALSE - 51)) | (1 << (ScriptGrammarParser.NULL - 51)) | (1 << (ScriptGrammarParser.IF - 51)) | (1 << (ScriptGrammarParser.FOR_EACH - 51)) | (1 << (ScriptGrammarParser.LOG - 51)) | (1 << (ScriptGrammarParser.VAR - 51)) | (1 << (ScriptGrammarParser.INT - 51)) | (1 << (ScriptGrammarParser.FLOAT - 51)) | (1 << (ScriptGrammarParser.STRING - 51)) | (1 << (ScriptGrammarParser.OTHER - 51)))) !== 0)) {
				{
				{
				this.state = 118;
				this.statement();
				}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public try_catch(): Try_catchContext {
		let _localctx: Try_catchContext = new Try_catchContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ScriptGrammarParser.RULE_try_catch);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			this.match(ScriptGrammarParser.TRY);
			this.state = 125;
			this.match(ScriptGrammarParser.OPEN_BRACE);
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ScriptGrammarParser.T__3) | (1 << ScriptGrammarParser.T__4) | (1 << ScriptGrammarParser.T__5) | (1 << ScriptGrammarParser.VOID) | (1 << ScriptGrammarParser.DATA_TYPE_STRING) | (1 << ScriptGrammarParser.DATA_TYPE_NUMBER) | (1 << ScriptGrammarParser.DATA_TYPE_BOOLEAN) | (1 << ScriptGrammarParser.DATA_TYPE_MAP) | (1 << ScriptGrammarParser.DATA_TYPE_LIST) | (1 << ScriptGrammarParser.DATA_TYPE_CRITERIA) | (1 << ScriptGrammarParser.DATA_TYPE_OBJECT) | (1 << ScriptGrammarParser.RETURN) | (1 << ScriptGrammarParser.TRY))) !== 0) || ((((_la - 51)) & ~0x1F) === 0 && ((1 << (_la - 51)) & ((1 << (ScriptGrammarParser.OPEN_PARANTHESIS - 51)) | (1 << (ScriptGrammarParser.OPEN_BRACE - 51)) | (1 << (ScriptGrammarParser.OPEN_BRACKET - 51)) | (1 << (ScriptGrammarParser.TRUE - 51)) | (1 << (ScriptGrammarParser.FALSE - 51)) | (1 << (ScriptGrammarParser.NULL - 51)) | (1 << (ScriptGrammarParser.IF - 51)) | (1 << (ScriptGrammarParser.FOR_EACH - 51)) | (1 << (ScriptGrammarParser.LOG - 51)) | (1 << (ScriptGrammarParser.VAR - 51)) | (1 << (ScriptGrammarParser.INT - 51)) | (1 << (ScriptGrammarParser.FLOAT - 51)) | (1 << (ScriptGrammarParser.STRING - 51)) | (1 << (ScriptGrammarParser.OTHER - 51)))) !== 0)) {
				{
				{
				this.state = 126;
				this.try_statement();
				}
				}
				this.state = 131;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 132;
			this.match(ScriptGrammarParser.CLOSE_BRACE);
			this.state = 133;
			this.match(ScriptGrammarParser.CATCH);
			this.state = 134;
			this.match(ScriptGrammarParser.OPEN_BRACE);
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ScriptGrammarParser.T__3) | (1 << ScriptGrammarParser.T__4) | (1 << ScriptGrammarParser.T__5) | (1 << ScriptGrammarParser.VOID) | (1 << ScriptGrammarParser.DATA_TYPE_STRING) | (1 << ScriptGrammarParser.DATA_TYPE_NUMBER) | (1 << ScriptGrammarParser.DATA_TYPE_BOOLEAN) | (1 << ScriptGrammarParser.DATA_TYPE_MAP) | (1 << ScriptGrammarParser.DATA_TYPE_LIST) | (1 << ScriptGrammarParser.DATA_TYPE_CRITERIA) | (1 << ScriptGrammarParser.DATA_TYPE_OBJECT) | (1 << ScriptGrammarParser.RETURN) | (1 << ScriptGrammarParser.TRY))) !== 0) || ((((_la - 51)) & ~0x1F) === 0 && ((1 << (_la - 51)) & ((1 << (ScriptGrammarParser.OPEN_PARANTHESIS - 51)) | (1 << (ScriptGrammarParser.OPEN_BRACE - 51)) | (1 << (ScriptGrammarParser.OPEN_BRACKET - 51)) | (1 << (ScriptGrammarParser.TRUE - 51)) | (1 << (ScriptGrammarParser.FALSE - 51)) | (1 << (ScriptGrammarParser.NULL - 51)) | (1 << (ScriptGrammarParser.IF - 51)) | (1 << (ScriptGrammarParser.FOR_EACH - 51)) | (1 << (ScriptGrammarParser.LOG - 51)) | (1 << (ScriptGrammarParser.VAR - 51)) | (1 << (ScriptGrammarParser.INT - 51)) | (1 << (ScriptGrammarParser.FLOAT - 51)) | (1 << (ScriptGrammarParser.STRING - 51)) | (1 << (ScriptGrammarParser.OTHER - 51)))) !== 0)) {
				{
				{
				this.state = 135;
				this.catch_statement();
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 141;
			this.match(ScriptGrammarParser.CLOSE_BRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public try_statement(): Try_statementContext {
		let _localctx: Try_statementContext = new Try_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ScriptGrammarParser.RULE_try_statement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public catch_statement(): Catch_statementContext {
		let _localctx: Catch_statementContext = new Catch_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ScriptGrammarParser.RULE_catch_statement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ScriptGrammarParser.RULE_statement);
		try {
			this.state = 159;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 147;
				this.assignment();
				}
				break;
